show by category

--- a/index.html
+++ b/index.html
@@ -105,23 +105,24 @@
 
                     <div id="laundry" class="contents swiper-slide">
                         <img class="laundry-img" src="img/tab_1.png" alt="laundry">
-                        <div class="laundry-qty-container item-box">
-                            <div class="laundry-qty qty-box col s3" data-price="10000">
-                                <span class="dec left-set">–</span>
-                                <span class="qty center-set">0</span>
-                                <span class="inc right-set">+</span>
-                                <div class="item-name" style="display: none">생활 물빨래</div>
-                                <div class="subtotal-price" style="display: none">0</div>
-                            </div>
-                            <div class="col s12">₩10,000/수거가방</div>
+                        <div class="item-box-container">
+                            <!-- <div class="item-box">
+                                <div class="laundry-qty qty-box col s3" data-price="10000">
+                                    <span class="dec left-set">–</span>
+                                    <span class="qty center-set">0</span>
+                                    <span class="inc right-set">+</span>
+                                    <div class="item-name" style="display: none">생활 물빨래</div>
+                                    <div class="subtotal-price" style="display: none">0</div>
+                                </div>
+                                <div class="col s12">₩10,000/수거가방</div>
+                            </div> -->
                         </div>
                     </div>
 
                     <div id="business" class="contents swiper-slide">
                         <img src="img/tap_2.png" alt="business">
-                        <div id="business-box">
-                        <ul class="item-box row">
-                           <!--  <li class= "col s12">
+                        <ul class="item-box-container row">
+                           <!--  <li class= "item-box col s12">
                                 <div class="item col">
                                     <div class="col s12">
                                         <div class="left item-name">test</div>
@@ -137,39 +138,38 @@
                             </li> -->
                             
                         </ul>
-                        </div>
                     </div>
                     <div id="top" class="contents swiper-slide">
                         <img src="img/tap_3.png" alt="top">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>
                     <div id="bottom" class="contents swiper-slide">
                         <img src="img/tap_4.png" alt="bottom">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>
                     <div id="outer" class="contents swiper-slide">
                         <img src="img/tap_5.png" alt="outer">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>
                     <div id="etc" class="contents swiper-slide">
                         <img src="img/tap_6.png" alt="etc">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>
                     <div id="bedclothes" class="contents swiper-slide">
                         <img src="img/tap_7.png" alt="bedclothes">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>
                     <div id="footwear" class="contents swiper-slide swiper-slide">
                         <img src="img/tap_8.png" alt="footwear">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>  
                     <div id="bag" class="contents swiper-slide">
                         <img src="img/tap_9.png" alt="bag">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>  
                     <div id="add" class="contents swiper-slide">
                         <img src="img/tap_10.png" alt="add">
-                        <ul class="item-box row"></ul>
+                        <ul class="item-box-container row"></ul>
                     </div>  
                 </div>
             </div>
