--- a/index.html
+++ b/index.html
@@ -48,52 +48,72 @@
               <ul class="tabs">
                 <li class="tab col s3" data-category="1">
                     <a class="active" href="#laundry">
-                        <img src="img/ic_laundry.png" alt="laundry"><div>생활빨래</div>
+                        <img class="tab-img" src="img/ic_laundry.png" alt="laundry">
+                        <img class="tab-img-on" src="img/ic_laundry_on.png" alt="laundry_clicked">
+                        <div>생활빨래</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="2">
                     <a href="#business">
-                        <img src="img/ic_business.png" alt="business"><div>비즈니스</div>
+                        <img class="tab-img" src="img/ic_business.png" alt="business">
+                        <img class="tab-img-on" src="img/ic_business_on.png" alt="business_clicked">
+                        <div>비즈니스</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="3">
                     <a href="#top">
-                        <img src="img/ic_top.png" alt="top"><div>상의</div>
+                        <img class="tab-img" src="img/ic_top.png" alt="top">
+                        <img class="tab-img-on" src="img/ic_top_on.png" alt="top_clicked">
+                        <div>상의</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="4">
                     <a href="#bottom">
-                        <img src="img/ic_bottom.png" alt="bottom"><div>하의</div>
+                        <img class="tab-img" src="img/ic_bottom.png" alt="bottom">
+                        <img class="tab-img-on" src="img/ic_bottom_on.png" alt="bottom_clicked">
+                        <div>하의</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="5">
                     <a href="#outer">
-                        <img src="img/ic_outer.png" alt="outer"><div>아우터</div>
+                        <img class="tab-img" src="img/ic_outer.png" alt="outer">
+                        <img class="tab-img-on" src="img/ic_outer_on.png" alt="outer_clicked">
+                        <div>아우터</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="6">
                     <a href="#etc">
-                        <img src="img/ic_etc.png" alt="etc"><div>기타</div>
+                        <img class="tab-img" src="img/ic_etc.png" alt="etc">
+                        <img class="tab-img-on" src="img/ic_etc_on.png" alt="etc_clicked">
+                        <div>기타</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="7">
                     <a href="#bedclothes">
-                        <img src="img/ic_bedclothes.png" alt="bedclothes"><div>이불</div>
+                        <img class="tab-img" src="img/ic_bedclothes.png" alt="bedclothes">
+                        <img class="tab-img-on" src="img/ic_bedclothes_on.png" alt="bedclothes_clicked">
+                        <div>이불</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="8">
                     <a href="#footwear">
-                        <img src="img/ic_footwear.png" alt="footwear"><div>신발</div>
+                        <img class="tab-img" src="img/ic_footwear.png" alt="footwear">
+                        <img class="tab-img-on" src="img/ic_footwear_on.png" alt="footwear_clicked">
+                        <div>신발</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="9">
                     <a href="#bag">
-                        <img src="img/ic_bag.png" alt="bag"><div>가방</div>
+                        <img class="tab-img" src="img/ic_bag.png" alt="bag">
+                        <img class="tab-img-on" src="img/ic_bag_on.png" alt="bag_clicked">
+                        <div>가방</div>
                     </a>
                 </li>
                 <li class="tab col s3" data-category="10">
                     <a href="#add">
-                        <img src="img/ic_add.png" alt="add"><div>추가비용</div>
+                        <img class="tab-img" src="img/ic_add.png" alt="add">
+                        <img class="tab-img-on" src="img/ic_add_on.png" alt="add_clicked">
+                        <div>추가비용</div>
                     </a>
                 </li>
               </ul>
@@ -114,7 +134,7 @@
                                     <div class="item-name" style="display: none">생활 물빨래</div>
                                     <div class="subtotal-price" style="display: none">0</div>
                                 </div>
-                                <div class="col s12">₩10,000/수거가방</div>
+                                <div class="item-price col s12"><br>₩10,000/수거가방</div>
                             </div> -->
                         </div>
                     </div>
