set cart-item, calculate total price&qty, draw cart-info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="tab-menu">
               <ul class="tabs">
                 <li class="tab col s3" data-category="1">
-                    <a class="active" href="#laundry">
+                    <a href="#laundry">
                         <img class="tab-img" src="img/ic_laundry.png" alt="laundry">
                         <img class="tab-img-on" src="img/ic_laundry_on.png" alt="laundry_clicked">
                         <div>생활빨래</div>
@@ -127,12 +127,10 @@
                         <img class="laundry-img" src="img/tab_1.png" alt="laundry">
                         <div class="item-box-container">
                             <!-- <div class="item-box">
-                                <div class="laundry-qty qty-box col s3" data-price="10000">
+                                <div class="laundry-qty qty-box col s3">
                                     <span class="dec left-set">–</span>
                                     <span class="qty center-set">0</span>
                                     <span class="inc right-set">+</span>
-                                    <div class="item-name" style="display: none">생활 물빨래</div>
-                                    <div class="subtotal-price" style="display: none">0</div>
                                 </div>
                                 <div class="item-price col s12"><br>₩10,000/수거가방</div>
                             </div> -->
@@ -145,15 +143,14 @@
                            <!--  <li class= "item-box col s12">
                                 <div class="item col">
                                     <div class="col s12">
-                                        <div class="left item-name">test</div>
+                                        <div class="left">test</div>
                                         <div class="right">₩2,000</div>
                                     </div>
                                 </div>
-                                <div class="qty-box col" data-price="2000">
+                                <div class="qty-box col">
                                     <span class="dec left-set">–</span>
                                     <span class="qty center-set">0</span>
                                     <span class="inc right-set">+</span>
-                                    <div class="subtotal-price" style="display: none">0</div>
                                 </div>
                             </li> -->
                             
@@ -196,11 +193,11 @@
         </div>
 
         <!-- 주문 정보 -->
-        <div class="order-info row">
+        <div class="cart-info row">
                 <div class="cart col">
                     <div class="col s12">
                         <div class="left">품목</div>
-                        <div class="right total-number" data-total-number="0">0개</div>
+                        <div class="right total-number">0개</div>
                     </div>
                     <div class="col s12">
                         <div class="left">합계</div>
