--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                 <div class="cart col">
                     <div class="col s12">
                         <div class="left">품목</div>
-                        <div class="right total-number">0개</div>
+                        <div class="right total-number"></div>
                     </div>
                     <div class="col s12">
                         <div class="left">합계</div>
-                        <div class="right total-price">0원</div>
+                        <div class="right total-price"></div>
                     </div>
                 </div>
                 <button class="cart-btn btn waves-effect waves-light col" type="submit">주문하기</button>
