--- a/trace.html
+++ b/trace.html
@@ -48,7 +48,7 @@
                 <div class="content">
                     <div class="title">주문조회</div>
                     <p>주문시 작성하셨던 휴대폰 번호로<br>세탁 주문 현황을 조회하실 수 있습니다.</p>
-                    <input id="phone" type="number" class="validate" placeholder="휴대폰 번호">
+                    <input id="phone" type="number" placeholder="휴대폰 번호">
                     <a class="trace-btn modal-trigger btn waves-effect waves-light" href="#modal-trace">주문확인</a> 
                 </div>
             </div>
