--- a/write.html
+++ b/write.html
@@ -92,12 +92,12 @@
                 <h5 class="headline-info">수거 및 배달 시간 선택</h5>
                 <div class="select-wrapper">
                     <div class="text">수거</div>
-                    <input type="date" name="pickup_date">
+                    <input type="date" id="pickup_date" name="pickup_date">
                     <input type="time" name="pickup_time">
                 </div>
                 <div class="select-wrapper">
                     <div class="text">배달</div>
-                    <input type="date" name="dropoff_date">
+                    <input type="date" id="dropoff_date" name="dropoff_date">
                     <input type="time" name="dropoff_time">
                 </div>
               </form>
