--- a/write.html
+++ b/write.html
@@ -93,12 +93,14 @@
                 <div class="select-wrapper">
                     <div class="text">수거</div>
                     <input type="date" id="pickup_date" name="pickup_date">
-                    <input type="time" name="pickup_time">
+                    <select name="pickup_time" id="pickup_time" required></select>
+                    <!-- <input type="time" name="pickup_time"> -->
                 </div>
                 <div class="select-wrapper">
                     <div class="text">배달</div>
                     <input type="date" id="dropoff_date" name="dropoff_date">
-                    <input type="time" name="dropoff_time">
+                    <select name="dropoff_time" id="dropoff_time" required></select>
+                    <!-- <input type="time" name="dropoff_time"> -->
                 </div>
               </form>
             </div>
