주문서 작성 페이지 대폭 수정

--- a/write.html
+++ b/write.html
@@ -83,7 +83,8 @@
                           </tr> -->
                         </tbody>
                 </table>
-
+                <div class="divider gray"></div>
+                <p>+ 주문 금액이 2만원 미만이면 배달비용 2000원이 추가됩니다.</p>
                 <button class="cancel-btn btn waves-effect waves-light col s4" type="submit">변경/추가</button>
             </div>
             
@@ -110,10 +111,7 @@
                 <h5 class="headline-info">주문 정보 입력</h5>
                 <form name="order_info" >
                     <div class="input-wrapper">
-                        <div class="col s5">
-                          <input id="name" type="text" name="name" placeholder="성함">
-                        </div>
-                        <div class="col s7">
+                        <div class="col s12">
                           <input id="phone" type="number"  name="phone" placeholder="휴대폰 번호">
                         </div>
                         <div class="col s12">
@@ -121,6 +119,9 @@
                         </div>
                         <div class="col s12">
                           <input id="address2" type="text" name="addr_building" placeholder="상세주소 입력">
+                        </div>
+                        <div class="col s12">
+                          <input id="memo" type="text" name="memo" placeholder="추가 요청 사항">
                         </div>
                     </div>
                     
