주문 조회 완료

--- a/trace.html
+++ b/trace.html
@@ -48,7 +48,7 @@
                 <div class="content">
                     <div class="title">주문조회</div>
                     <p>주문시 작성하셨던 휴대폰 번호로<br>세탁 주문 현황을 조회하실 수 있습니다.</p>
-                    <input id="phone" type="number" placeholder="휴대폰 번호">
+                    <input id="phone" type="number" maxlength="11" placeholder="휴대폰 번호를 입력해주세요.">
                     <a class="trace-btn modal-trigger btn waves-effect waves-light" href="#modal-trace">주문확인</a> 
                 </div>
             </div>
@@ -57,15 +57,15 @@
         <!-- 모달 -->
         <div id="modal-trace" class="modal">
             <div class="modal-content">
-                <i class="close-btn material-icons">close</i>
+                <i class="close-btn modal-close modal-action material-icons">close</i>
                 <div class="caption center">최근 주문 조회</div>
                 <img src="img/ic_trace.png">
-                <div class="center subtitle">크린파트너<br>배정 중입니다.</div>
+                <div class="center subtitle">주문 조회를<br>실패했습니다.</div>
                 
                 <div class="progress-bar">
                     <div class="step">
                         <div class="circle">
-                            <div class="inner-circle"></div>
+                            <div></div>
                         </div>
                         <div class="progress-name">수거</div>
                     </div>
@@ -74,7 +74,7 @@
 
                     <div class="step">
                         <div class="circle">
-                            <div class="inner-circle"></div>
+                            <div></div>
                         </div>
                         <div class="progress-name">세탁</div>
                     </div>
@@ -83,7 +83,7 @@
 
                     <div class="step">
                         <div class="circle">
-                            <div class="inner-circle"></div>
+                            <div></div>
                         </div>
                         <div class="progress-name">배달</div>
                     </div>
@@ -92,7 +92,7 @@
 
                     <div class="step">
                         <div class="circle">
-                            <div class="inner-circle"></div>
+                            <div></div>
                         </div>
                         <div class="progress-name">완료</div>
                     </div>
@@ -104,25 +104,21 @@
                     <tr>
                         <td>주소</td>
                         <td>
-                            <div data-field="address">서울특별시 관악구 봉천동 1708</div>
-                            <div data-field="address2">107동 1304</div>
+                            <div data-field="address">주소</div>
+                            <div data-field="building">상세 주소</div>
                         </td>
                     </tr>
                     <tr>
                         <td>수거시간</td>
-                        <td>2016-07-27 20:30</td>
+                        <td data-field="pickup">0000-00-00 00:00</td>
                     </tr>
                     <tr>
                         <td>배달시간</td>
-                        <td>2016-07-30 10:00</td>
+                        <td data-field="dropoff">0000-00-00 00:00</td>
                     </tr>
                 </table>
             </div>
         </div>
-    
-
-
-
 
         <footer class="page-footer">
             <div class="row">
@@ -143,6 +139,6 @@
     	<!--Import jQuery before materialize.js-->
     	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     	<script type="text/javascript" src="js/materialize.min.js"></script>
-    	<script src="js/index.js"></script>
+    	<script src="js/trace.js"></script>
 	</body>
 </html>
